--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,4 +1,24 @@
 {
+    "View tasks": "Xem nhiệm vụ",
+    "View user's information": "Xem thông tin người dùng",
+    "New user": "Thêm người dùng mới",
+    "Enter first name": "Nhập họ của người dùng",
+    "Enter last name": "Nhập tên của người dùng",
+    "Enter email": "Nhập email của người dùng",
+    "Enter username": "Nhập tên đăng nhập của người dùng",
+    "Confirm password": "Xác nhận mật khẩu",
+    "Enter password": "Nhập mật khẩu của người dùng",
+    "Status": "Trạng thái",
+    "Permission": "Phân quyền",
+    "Active": "Kích hoạt",
+    "Unactive": "Không kích hoạt",
+    "Admin": "Quản trị viên",
+    "User": "Người dùng",
+    "New task": "Thêm nhiệm vụ",
+    "Title": "Tiêu đề",
+    "Description": "Mô tả",
+    "User ID": "Mã NV",
+    "Enter title": "Thêm tiêu đề",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
@@ -232,7 +252,7 @@
     "French Guiana": "Guiana Thuộc Pháp",
     "French Polynesia": "Polynesia Thuộc Pháp",
     "French Southern Territories": "Lãnh Thổ Phía Nam Thuộc Pháp",
-    "Full name": "Tên đầy đủ",
+    "Full name": "Họ tên",
     "Gabon": "Gabon",
     "Gambia": "Gambia",
     "Georgia": "Georgia",
@@ -666,6 +686,7 @@
     "Update Payment Method": "Cập Nhật Phương Thức Thanh Toán",
     "Update your account's profile information and email address.": "Cập nhật thông tin hồ sơ tài khoản và địa chỉ email của bạn.",
     "Uruguay": "Uruguay",
+    "Users": "Người dùng",
     "Username": "Tên đăng nhập",
     "Use a recovery code": "Sử dụng mã khôi phục",
     "Use an authentication code": "Sử dụng mã xác minh",
@@ -722,5 +743,8 @@
     "Zambia": "Zambia",
     "Zimbabwe": "Zimbabwe",
     "Zip / Postal Code": "Zip / Mã Bưu Điện",
-    "Åland Islands": "Quần đảo Åland"
+    "Åland Islands": "Quần đảo Åland",
+    "List of users": "Danh sách người dùng",
+    "List of tasks": "Danh sách nhiệm vụ",
+    "Tasks": "Nhiệm vụ"
 }
